# CALHippo-Framework

./: .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TODO.md  pyproject.toml
documents/: data_setup.md  hr_lr_coordinate_conventions.md  pipeline.md  test_pipeline.md  utils_functions.md
experiments/density_estimation/best_model/: 9_shorter_unet_normalizedgame_asymclassnormalizedl1loss_adamw.yaml
experiments/segmentation/allmodels/: allmodels-RCA1.yaml  allmodels-RCA2.yaml  allmodels-RCA3.yaml  allmodels-RCA4.yaml
media/: ca_pointcloud_infographic_web.webm
media/hr_merging_and_classification/: hr_merging_and_classification_3096_RCA3_web.webm
media/lr_density_predictions/: lr_density_predictions_3096_web.webm
media/point_cloud_and_ca_infographic/: ca_pointcloud_infographic_web.webm
media/segmentation_and_classification/: hr_segmentation_classification_3096_RCA3_defaultcrop_web.webm  hr_segmentation_classification_3096_RCA3_web.webm
media/stl_classes/: interneuron_cells.stl  stl_export_summary.json
media/stl_classes/ascii_outputs/: interneuron_cells_ascii.stl
notebooks/misc/: hr_lr_mapping.ipynb
scripts/: default_lr_ids.txt  launch_allmodels_ca_slurm.sh  launch_segmentation_allmodels_slurm.py  launch_single_experiment.sbatch  launch_slurm_experiments.sh  reexport_classification_model.py  run_yaml_experiments.bash  setup_data.py  test_pipeline.py
src/classification/: README.txt  backbones.py  cell_annotation.py  data_classes.py  data_loader.py  feature_extraction.py  inference.py  main_classification.py  training.py  utils.py
src/classification/processing_pipelines/: __init__.py  base.py  centroid.py  logistic_regression.py  logistic_vision.py
src/density_estimator/: __init__.py  __main__.py  train.py
src/density_estimator/config/: __init__.py  config.py
src/density_estimator/datasets/: __init__.py  create_dataset.py  create_dataset_support.py  density_dataset.py  density_generation.py
src/density_estimator/losses/: __init__.py  count_loss.py  density_loss.py  fft_loss.py  foreground_aware_loss.py  game_loss.py  grid_count_loss.py  l1_class_count_loss.py  l1_class_count_loss_thresh.py  l1_class_game_loss.py  l1_count_loss.py  ssim_loss.py
src/lr_inference/: README.md  __init__.py  gt_predict_eval.py  point_cloud_creation.py  predict_on_lr_wsi_folder.py
src/misc/: aggregate_summary_metrics.py  build_results_table.py  convert_list_wsi_to_tif.py  cut_point_cloud.py  download_low_res.py  extract_y_values.py  merging_grid_search.py  summarize_experiments.py  visualize_raw_density_patches.py  wsi_to_roi.py
src/preprocessing/: README.md  extract_crops_and_coords_HR.py  extract_crops_and_coords_LR.py  extract_hr_region_crops.py  generate_masks_utils.py  surfaces_utils.py
src/segmentation/: multimodel_inference.py
src/utils/: coords_conversion.py  helpers.py  logger_setup.py  visualization.py  wandb_utils.py
(+91 files in other folders)
